--- a/AI-Ex.ipynb
+++ b/AI-Ex.ipynb
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,14 +577,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def breadth_first_graph_search(agent):\n",
+    "    \"\"\"\n",
+    "    Search through the successors of a problem to find a goal.\n",
+    "    The argument frontier should be an empty queue.\n",
+    "    Does not get trapped by loops.\n",
+    "    If two paths reach a state, only use the first one.\n",
+    "    \"\"\"\n",
+    "    frontier = [(Node(agent.initial_state))]  # Queue\n",
+    "    explored = []\n",
+    "    while frontier:\n",
+    "        node = frontier.pop(0)  # Pop the first element from the frontier list\n",
+    "        if node.state == agent.goal_state:\n",
+    "            return node.path()  # return the path to the goal node\n",
+    "        explored.append(node.state)\n",
+    "        succ_states, succ_actions, succ_costs = agent.possible_moves()\n",
+    "        for i in range(len(succ_states)):\n",
+    "            succ_state, succ_action, succ_cost = succ_states[i], succ_actions[i], succ_costs[i]\n",
+    "            if not np.any(np.all(succ_state == explored, axis=0)):\n",
+    "                child_node = Node(succ_state, node, succ_action, succ_cost)\n",
+    "                frontier.append(child_node)  # Add the child node to the end of the frontier list\n",
+    "    return None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def uniform_cost_search(agent):\n",
+    "    \"\"\"\n",
+    "    Search the deepest nodes in the search tree first.\n",
+    "    Search through the successors of a problem to find a goal.\n",
+    "    The argument frontier should be an empty queue.\n",
+    "    Does not get trapped by loops.\n",
+    "    If two paths reach a state, only use the first one.\n",
+    "    \"\"\"\n",
+    "    frontier = [(Node(agent.initial_state))] # Priority Queue\n",
+    "    explored = []\n",
+    "    while frontier:\n",
+    "        frontier = order_frontier(frontier)\n",
+    "        node = frontier.pop(0)\n",
+    "\n",
+    "        if node.state == agent.goal_state:\n",
+    "            return node.path()\n",
+    "\n",
+    "        explored.append(node.state)\n",
+    "\n",
+    "        succ_states, succ_actions, succ_costs = agent.possible_moves()\n",
+    "\n",
+    "        for i in range(len(succ_states)):\n",
+    "            succ_state, succ_action, succ_cost = succ_states[i], succ_actions[i], succ_costs[i]\n",
+    "\n",
+    "            if not np.any([np.array_equal(succ_state, state) for state in explored]):\n",
+    "                child_node = Node(succ_state, node, succ_action, succ_cost)\n",
+    "                frontier.append(child_node)\n",
+    "\n",
+    "    return explored"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<__main__.Node object at 0x0000020B14B53E20>]\n",
+      "[<__main__.Node object at 0x0000020B15374AC0>]\n",
       "frontier[0].state:  (0, 0)\n",
       "frontier[0].parent:  None\n",
       "frontier[0].action:  None\n",
@@ -596,10 +669,10 @@
       "\n",
       "self.current_state[0]:  0\n",
       "move[0]:  0\n",
-      "self.world.shape[0]:  2\n",
+      "self.world.shape[0]:  3\n",
       "self.current_state[1]:  0\n",
       "move[1]:  1\n",
-      "self.world.shape[1]:  2\n",
+      "self.world.shape[1]:  3\n",
       "move:  [0 1]\n",
       "new_state:  [0, 1]\n",
       "action:  [0, 1]\n",
@@ -610,10 +683,10 @@
       "\n",
       "self.current_state[0]:  0\n",
       "move[0]:  1\n",
-      "self.world.shape[0]:  2\n",
+      "self.world.shape[0]:  3\n",
       "self.current_state[1]:  0\n",
       "move[1]:  0\n",
-      "self.world.shape[1]:  2\n",
+      "self.world.shape[1]:  3\n",
       "move:  [1 0]\n",
       "new_state:  [1, 0]\n",
       "action:  [1, 0]\n",
@@ -622,10 +695,10 @@
       "cost:  1\n",
       "parent.path_cost:  0\n",
       "cost:  5\n",
-      "Frontier:  [<__main__.Node object at 0x0000020B14B06A30>, <__main__.Node object at 0x0000020B05E99640>]\n",
-      "[<__main__.Node object at 0x0000020B14B06A30>, <__main__.Node object at 0x0000020B05E99640>]\n",
+      "Frontier:  [<__main__.Node object at 0x0000020B153748B0>, <__main__.Node object at 0x0000020B15374FA0>]\n",
+      "[<__main__.Node object at 0x0000020B153748B0>, <__main__.Node object at 0x0000020B15374FA0>]\n",
       "frontier[1].state:  [1, 0]\n",
-      "frontier[1].parent:  <__main__.Node object at 0x0000020B14B53E20>\n",
+      "frontier[1].parent:  <__main__.Node object at 0x0000020B15374AC0>\n",
       "frontier[1].action:  [1, 0]\n",
       "\n",
       "New data\n",
@@ -633,10 +706,10 @@
       "\n",
       "self.current_state[0]:  0\n",
       "move[0]:  0\n",
-      "self.world.shape[0]:  2\n",
+      "self.world.shape[0]:  3\n",
       "self.current_state[1]:  0\n",
       "move[1]:  1\n",
-      "self.world.shape[1]:  2\n",
+      "self.world.shape[1]:  3\n",
       "move:  [0 1]\n",
       "new_state:  [0, 1]\n",
       "action:  [0, 1]\n",
@@ -647,20 +720,20 @@
       "\n",
       "self.current_state[0]:  0\n",
       "move[0]:  1\n",
-      "self.world.shape[0]:  2\n",
+      "self.world.shape[0]:  3\n",
       "self.current_state[1]:  0\n",
       "move[1]:  0\n",
-      "self.world.shape[1]:  2\n",
+      "self.world.shape[1]:  3\n",
       "move:  [1 0]\n",
       "new_state:  [1, 0]\n",
       "action:  [1, 0]\n",
       "cost:  5\n",
       "parent.path_cost:  5\n",
       "cost:  1\n",
-      "Frontier:  [<__main__.Node object at 0x0000020B14B06A30>, <__main__.Node object at 0x0000020B05E99310>]\n",
-      "[<__main__.Node object at 0x0000020B14B06A30>, <__main__.Node object at 0x0000020B05E99310>]\n",
+      "Frontier:  [<__main__.Node object at 0x0000020B153748B0>, <__main__.Node object at 0x0000020B155AAA00>]\n",
+      "[<__main__.Node object at 0x0000020B153748B0>, <__main__.Node object at 0x0000020B155AAA00>]\n",
       "frontier[1].state:  [0, 1]\n",
-      "frontier[1].parent:  <__main__.Node object at 0x0000020B05E99640>\n",
+      "frontier[1].parent:  <__main__.Node object at 0x0000020B15374FA0>\n",
       "frontier[1].action:  [0, 1]\n",
       "\n",
       "New data\n",
@@ -668,10 +741,10 @@
       "\n",
       "self.current_state[0]:  0\n",
       "move[0]:  0\n",
-      "self.world.shape[0]:  2\n",
+      "self.world.shape[0]:  3\n",
       "self.current_state[1]:  0\n",
       "move[1]:  1\n",
-      "self.world.shape[1]:  2\n",
+      "self.world.shape[1]:  3\n",
       "move:  [0 1]\n",
       "new_state:  [0, 1]\n",
       "action:  [0, 1]\n",
@@ -682,18 +755,18 @@
       "\n",
       "self.current_state[0]:  0\n",
       "move[0]:  1\n",
-      "self.world.shape[0]:  2\n",
+      "self.world.shape[0]:  3\n",
       "self.current_state[1]:  0\n",
       "move[1]:  0\n",
-      "self.world.shape[1]:  2\n",
+      "self.world.shape[1]:  3\n",
       "move:  [1 0]\n",
       "new_state:  [1, 0]\n",
       "action:  [1, 0]\n",
       "cost:  5\n",
-      "Frontier:  [<__main__.Node object at 0x0000020B14B06A30>]\n",
-      "[<__main__.Node object at 0x0000020B14B06A30>]\n",
+      "Frontier:  [<__main__.Node object at 0x0000020B153748B0>]\n",
+      "[<__main__.Node object at 0x0000020B153748B0>]\n",
       "frontier[0].state:  [0, 1]\n",
-      "frontier[0].parent:  <__main__.Node object at 0x0000020B14B53E20>\n",
+      "frontier[0].parent:  <__main__.Node object at 0x0000020B15374AC0>\n",
       "frontier[0].action:  [0, 1]\n",
       "\n",
       "\n",
@@ -703,10 +776,10 @@
       "\n",
       "self.current_state[0]:  0\n",
       "move[0]:  0\n",
-      "self.world.shape[0]:  2\n",
+      "self.world.shape[0]:  3\n",
       "self.current_state[1]:  0\n",
       "move[1]:  1\n",
-      "self.world.shape[1]:  2\n",
+      "self.world.shape[1]:  3\n",
       "move:  [0 1]\n",
       "new_state:  [0, 1]\n",
       "action:  [0, 1]\n",
@@ -717,10 +790,10 @@
       "\n",
       "self.current_state[0]:  0\n",
       "move[0]:  1\n",
-      "self.world.shape[0]:  2\n",
+      "self.world.shape[0]:  3\n",
       "self.current_state[1]:  0\n",
       "move[1]:  0\n",
-      "self.world.shape[1]:  2\n",
+      "self.world.shape[1]:  3\n",
       "move:  [1 0]\n",
       "new_state:  [1, 0]\n",
       "action:  [1, 0]\n",
@@ -733,8 +806,9 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "world = np.array([[0, 1],\n",
-    "                  [2, 3]])\n",
+    "world = np.array([[0, 1,3],\n",
+    "                  [2, 3,2],\n",
+    "                  [0,1,3]])\n",
     "\n",
     "costs = {0: 10, 1: 1, 2: 5, 3:100}\n",
     "\n",
@@ -753,8 +827,197 @@
     "\"\"\"\n",
     "\n",
     "path = depth_first_graph_search(agent1)\n",
+    "#path2=\n",
     "print(path)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "New data\n",
+      "\n",
+      "\n",
+      "self.current_state[0]:  0\n",
+      "move[0]:  0\n",
+      "self.world.shape[0]:  3\n",
+      "self.current_state[1]:  0\n",
+      "move[1]:  1\n",
+      "self.world.shape[1]:  3\n",
+      "move:  [0 1]\n",
+      "new_state:  [0, 1]\n",
+      "action:  [0, 1]\n",
+      "cost:  1\n",
+      "\n",
+      "New data\n",
+      "\n",
+      "\n",
+      "self.current_state[0]:  0\n",
+      "move[0]:  1\n",
+      "self.world.shape[0]:  3\n",
+      "self.current_state[1]:  0\n",
+      "move[1]:  0\n",
+      "self.world.shape[1]:  3\n",
+      "move:  [1 0]\n",
+      "new_state:  [1, 0]\n",
+      "action:  [1, 0]\n",
+      "cost:  5\n",
+      "parent.path_cost:  0\n",
+      "cost:  1\n",
+      "parent.path_cost:  0\n",
+      "cost:  5\n",
+      "\n",
+      "New data\n",
+      "\n",
+      "\n",
+      "self.current_state[0]:  0\n",
+      "move[0]:  0\n",
+      "self.world.shape[0]:  3\n",
+      "self.current_state[1]:  0\n",
+      "move[1]:  1\n",
+      "self.world.shape[1]:  3\n",
+      "move:  [0 1]\n",
+      "new_state:  [0, 1]\n",
+      "action:  [0, 1]\n",
+      "cost:  1\n",
+      "\n",
+      "New data\n",
+      "\n",
+      "\n",
+      "self.current_state[0]:  0\n",
+      "move[0]:  1\n",
+      "self.world.shape[0]:  3\n",
+      "self.current_state[1]:  0\n",
+      "move[1]:  0\n",
+      "self.world.shape[1]:  3\n",
+      "move:  [1 0]\n",
+      "new_state:  [1, 0]\n",
+      "action:  [1, 0]\n",
+      "cost:  5\n",
+      "parent.path_cost:  5\n",
+      "cost:  1\n",
+      "\n",
+      "New data\n",
+      "\n",
+      "\n",
+      "self.current_state[0]:  0\n",
+      "move[0]:  0\n",
+      "self.world.shape[0]:  3\n",
+      "self.current_state[1]:  0\n",
+      "move[1]:  1\n",
+      "self.world.shape[1]:  3\n",
+      "move:  [0 1]\n",
+      "new_state:  [0, 1]\n",
+      "action:  [0, 1]\n",
+      "cost:  1\n",
+      "\n",
+      "New data\n",
+      "\n",
+      "\n",
+      "self.current_state[0]:  0\n",
+      "move[0]:  1\n",
+      "self.world.shape[0]:  3\n",
+      "self.current_state[1]:  0\n",
+      "move[1]:  0\n",
+      "self.world.shape[1]:  3\n",
+      "move:  [1 0]\n",
+      "new_state:  [1, 0]\n",
+      "action:  [1, 0]\n",
+      "cost:  5\n",
+      "\n",
+      "New data\n",
+      "\n",
+      "\n",
+      "self.current_state[0]:  0\n",
+      "move[0]:  0\n",
+      "self.world.shape[0]:  3\n",
+      "self.current_state[1]:  0\n",
+      "move[1]:  1\n",
+      "self.world.shape[1]:  3\n",
+      "move:  [0 1]\n",
+      "new_state:  [0, 1]\n",
+      "action:  [0, 1]\n",
+      "cost:  1\n",
+      "\n",
+      "New data\n",
+      "\n",
+      "\n",
+      "self.current_state[0]:  0\n",
+      "move[0]:  1\n",
+      "self.world.shape[0]:  3\n",
+      "self.current_state[1]:  0\n",
+      "move[1]:  0\n",
+      "self.world.shape[1]:  3\n",
+      "move:  [1 0]\n",
+      "new_state:  [1, 0]\n",
+      "action:  [1, 0]\n",
+      "cost:  5\n",
+      "[(0, 0), [1, 0], [0, 1], [0, 1]]\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'path'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[61], line 27\u001b[0m\n\u001b[0;32m     23\u001b[0m g_node \u001b[39m=\u001b[39m uniform_cost_search(Ada)\n\u001b[0;32m     25\u001b[0m \u001b[39mprint\u001b[39m(g_node)\n\u001b[1;32m---> 27\u001b[0m p \u001b[39m=\u001b[39m g_node\u001b[39m.\u001b[39;49mpath()\n\u001b[0;32m     29\u001b[0m moves \u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39m01\u001b[39m\u001b[39m'\u001b[39m:\u001b[39m'\u001b[39m\u001b[39m⏩\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39m0-1\u001b[39m\u001b[39m'\u001b[39m:\u001b[39m'\u001b[39m\u001b[39m⏪\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39m-10\u001b[39m\u001b[39m'\u001b[39m:\u001b[39m'\u001b[39m\u001b[39m⏫\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m10\u001b[39m\u001b[39m'\u001b[39m:\u001b[39m'\u001b[39m\u001b[39m⏬\u001b[39m\u001b[39m'\u001b[39m}\n\u001b[0;32m     31\u001b[0m map_copy \u001b[39m=\u001b[39m map1\u001b[39m.\u001b[39mcopy()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'path'"
+     ]
+    }
+   ],
+   "source": [
+    "def order_frontier(frontier):\n",
+    "\n",
+    "    costs = []\n",
+    "    new_list = []\n",
+    "\n",
+    "    for i in range(len(frontier)):\n",
+    "\n",
+    "        costs.append(frontier[i].path_cost)\n",
+    "\n",
+    "    costs = np.array(costs)\n",
+    "\n",
+    "    indexes = np.argsort(costs)\n",
+    "\n",
+    "    for i in range(len(frontier)):\n",
+    "\n",
+    "        new_list.append(frontier[indexes[i]])\n",
+    "\n",
+    "    return list(reversed(new_list))\n",
+    "\n",
+    "\n",
+    "\n",
+    "Ada = Agent(world, costs , (0,0), (1,1))\n",
+    "g_node = uniform_cost_search(Ada)\n",
+    "\n",
+    "print(g_node)\n",
+    "\n",
+    "p = g_node.path()\n",
+    "\n",
+    "moves = {'01':'⏩','0-1':'⏪','-10':'⏫', '10':'⏬'}\n",
+    "\n",
+    "map_copy = map1.copy()\n",
+    "\n",
+    "\n",
+    "for i in range(len(p)-1):\n",
+    "\n",
+    "    ac = p[i]\n",
+    "    n = p[i+1]\n",
+    "\n",
+    "    map_copy[ac.state[0], ac.state[1]] = moves[str(n.action[0])+str(n.action[1])]\n",
+    "\n",
+    "\n",
+    "for i in range(map_copy.shape[0]):\n",
+    "    print(map_copy[i,:])"
    ]
   }
  ],
