--- a/AI-Ex2.ipynb
+++ b/AI-Ex2.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -104,24 +104,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[12, 15]\n",
-      "['⏬' '🚸' '🛣' '🛣' '🛣' '🛣' '🛣' '🛑' '🛣' '🛣' '🚦' '🛣' '🛣' '🛣' '🚔' '🛣']\n",
-      "['⏬' '🌲' '🌲' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚘' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣']\n",
-      "['⏩' '⏩' '⏩' '⏩' '⏬' '🌲' '🌲' '🛣' '🛣' '🚘' '🛣' '🌲' '🌲' '🛣' '🚘' '🛣']\n",
-      "['🛣' '🛑' '🛣' '🚸' '⏬' '🌲' '🛣' '🛣' '🏢' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚦']\n",
-      "['🌲' '🚘' '🚘' '🛣' '⏩' '⏬' '🚘' '🛣' '🏢' '🛣' '🛣' '🌲' '🛣' '🛑' '🛣' '🛣']\n",
-      "['🛣' '🛣' '🛣' '🏢' '🛣' '⏩' '⏩' '⏩' '⏩' '⏬' '🚦' '🛣' '🛣' '🛣' '🛣' '🚸']\n",
-      "['🛣' '🛣' '🏢' '🏢' '🏢' '🛣' '🛑' '🛣' '🛣' '⏬' '🚘' '🛣' '🛣' '🚸' '🛣' '🛣']\n",
-      "['🚦' '🛣' '🏢' '🚔' '🛣' '🛣' '🏢' '🚧' '🛣' '⏩' '⏬' '🛣' '🛣' '🛣' '🛣' '🚔']\n",
-      "['🛣' '🛣' '🛣' '🚔' '🛣' '🛣' '🏢' '🏢' '🏢' '🚸' '⏬' '🛑' '🚘' '🚔' '🛣' '🛣']\n",
-      "['🛣' '🛑' '🛣' '🛣' '🛣' '🛣' '🏢' '🏢' '🏢' '🛣' '⏬' '🏢' '🛣' '🛣' '🛣' '🚘']\n",
-      "['🛣' '🛣' '🛣' '🌲' '🌲' '🚦' '🛣' '🛣' '🛣' '🛣' '⏬' '🛣' '🛣' '🛣' '🚧' '🚘']\n",
-      "['🚘' '🚸' '🛣' '🌲' '🌲' '🛣' '🛣' '🛣' '🛣' '🚔' '⏩' '⏩' '⏬' '🚘' '🛣' '🛣']\n",
-      "['🚘' '🛣' '🚧' '🛣' '🛣' '🛣' '🛑' '🛣' '🚘' '🚘' '🛣' '🚘' '⏩' '⏩' '⏩' '🛣']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "\"\\n\\nAda = Agent(map1, COSTS, [0,0], [12,15])\\ng_node = uniform_cost_search(Ada)\\n\\nprint(g_node.state)\\n\\np = g_node.path()\\n\\nmoves = {'01':'⏩','0-1':'⏪','-10':'⏫', '10':'⏬'}\\n\\nmap_copy = map1.copy()\\n\\n\\nfor i in range(len(p)-1):\\n\\n    ac = p[i]\\n    n = p[i+1]\\n\\n    map_copy[ac.state[0], ac.state[1]] = moves[str(n.action[0])+str(n.action[1])]\\n\\n\\nfor i in range(map_copy.shape[0]):\\n    print(map_copy[i,:])\\n\\n\""
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -206,7 +196,6 @@
     "\n",
     "\n",
     "def depth_first_graph_search(agent):\n",
-    "    #TODO\n",
     "    \"\"\"\n",
     "    Search the deepest nodes in the search tree first.\n",
     "    Search through the successors of a problem to find a goal.\n",
@@ -215,45 +204,72 @@
     "    If two paths reach a state, only use the first one.\n",
     "    \"\"\"\n",
     "    frontier = [(Node(agent.initial_state))]  # Stack\n",
-    "\n",
     "    explored = []\n",
     "    while frontier:\n",
-    "        pass\n",
+    "        node = frontier.pop() # LIFO\n",
+    "        if node.state == agent.goal_state:\n",
+    "            return node.path()\n",
+    "        explored.append(node)\n",
+    "        for child in node.successors(agent):\n",
+    "            if child not in explored and child not in frontier:\n",
+    "                frontier.append(child)\n",
     "    return None\n",
     "\n",
+    "\n",
     "def breadth_first_graph_search(agent):\n",
-    "    #TODO\n",
     "    \"\"\"\n",
     "    Search through the successors of a problem to find a goal.\n",
     "    The argument frontier should be an empty queue.\n",
     "    Does not get trapped by loops.\n",
     "    If two paths reach a state, only use the first one.\n",
     "    \"\"\"\n",
-    "    frontier = [(Node(agent.initial_state))]  # Queue\n",
+    "    frontier = [Node(agent.initial_state)]  # Queue\n",
     "\n",
     "    explored = []\n",
     "    while frontier:\n",
-    "        pass\n",
+    "        node = frontier.pop(0)\n",
+    "        if node.state == agent.goal_state:\n",
+    "            return node.path()\n",
+    "        explored.append(node.state)\n",
+    "\n",
+    "        for child in node.successors(agent):\n",
+    "            if child.state not in explored and child not in frontier:\n",
+    "                frontier.append(child)\n",
+    "\n",
     "    return None\n",
     "\n",
     "\n",
     "\n",
     "def uniform_cost_search(agent):\n",
-    "    #TODO\n",
     "    \"\"\"\n",
-    "    Search the deepest nodes in the search tree first.\n",
     "    Search through the successors of a problem to find a goal.\n",
     "    The argument frontier should be an empty queue.\n",
     "    Does not get trapped by loops.\n",
     "    If two paths reach a state, only use the first one.\n",
     "    \"\"\"\n",
-    "    frontier = [(Node(agent.initial_state))]  # Stack\n",
+    "    frontier = [(Node(agent.initial_state))]  # PriorityQueue\n",
     "\n",
     "    explored = []\n",
     "    while frontier:\n",
-    "        pass\n",
+    "        node = frontier.pop(0)\n",
+    "        if agent.goal_state == node.state:\n",
+    "            return node.path()\n",
+    "\n",
+    "        if node.state not in explored:\n",
+    "            explored.append(node.state)\n",
+    "            children = node.successors(agent)\n",
+    "\n",
+    "            for child in children:\n",
+    "                index = 0\n",
+    "                for i in range(len(frontier)):\n",
+    "                    if child.path_cost < frontier[i].path_cost:\n",
+    "                        index = i + 1\n",
+    "                    else:\n",
+    "                        break\n",
+    "                frontier.insert(index, child)\n",
     "\n",
     "    return None\n",
+    "\n",
     "\n",
     "\n",
     "def order_frontier(frontier):\n",
@@ -276,6 +292,7 @@
     "    return list(reversed(new_list))\n",
     "\n",
     "\n",
+    "\"\"\"\n",
     "\n",
     "Ada = Agent(map1, COSTS, [0,0], [12,15])\n",
     "g_node = uniform_cost_search(Ada)\n",
@@ -298,13 +315,56 @@
     "\n",
     "\n",
     "for i in range(map_copy.shape[0]):\n",
-    "    print(map_copy[i,:])"
+    "    print(map_copy[i,:])\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 15\u001b[0m\n\u001b[0;32m     12\u001b[0m agent \u001b[39m=\u001b[39m Agent(world, costs, initial_state, goal_state)\n\u001b[0;32m     14\u001b[0m \u001b[39m# Run depth first search\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m goal_node \u001b[39m=\u001b[39m depth_first_graph_search(agent)\n\u001b[0;32m     17\u001b[0m \u001b[39m# Print the goal node state\u001b[39;00m\n\u001b[0;32m     18\u001b[0m \u001b[39mprint\u001b[39m(goal_node\u001b[39m.\u001b[39mstate)\n",
+      "Cell \u001b[1;32mIn[7], line 94\u001b[0m, in \u001b[0;36mdepth_first_graph_search\u001b[1;34m(agent)\u001b[0m\n\u001b[0;32m     92\u001b[0m     \u001b[39mreturn\u001b[39;00m node\u001b[39m.\u001b[39mpath()\n\u001b[0;32m     93\u001b[0m explored\u001b[39m.\u001b[39mappend(node)\n\u001b[1;32m---> 94\u001b[0m \u001b[39mfor\u001b[39;00m child \u001b[39min\u001b[39;00m node\u001b[39m.\u001b[39;49msuccessors(agent):\n\u001b[0;32m     95\u001b[0m     \u001b[39mif\u001b[39;00m child \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m explored \u001b[39mand\u001b[39;00m child \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m frontier:\n\u001b[0;32m     96\u001b[0m         frontier\u001b[39m.\u001b[39mappend(child)\n",
+      "Cell \u001b[1;32mIn[7], line 61\u001b[0m, in \u001b[0;36mNode.successors\u001b[1;34m(self, agent)\u001b[0m\n\u001b[0;32m     59\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msuccessors\u001b[39m(\u001b[39mself\u001b[39m, agent):\n\u001b[1;32m---> 61\u001b[0m     succ_states, succ_actions, succ_costs \u001b[39m=\u001b[39m agent\u001b[39m.\u001b[39;49mpossible_moves()\n\u001b[0;32m     62\u001b[0m     children \u001b[39m=\u001b[39m []\n\u001b[0;32m     64\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(succ_states)):\n",
+      "Cell \u001b[1;32mIn[7], line 27\u001b[0m, in \u001b[0;36mAgent.possible_moves\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     23\u001b[0m new_state \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcurrent_state[\u001b[39m0\u001b[39m] \u001b[39m+\u001b[39m move[\u001b[39m0\u001b[39m], \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcurrent_state[\u001b[39m1\u001b[39m] \u001b[39m+\u001b[39m move[\u001b[39m1\u001b[39m]]\n\u001b[0;32m     25\u001b[0m action \u001b[39m=\u001b[39m [move[\u001b[39m0\u001b[39m], move[\u001b[39m1\u001b[39m]]\n\u001b[1;32m---> 27\u001b[0m cost \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcosts[\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mworld[new_state[\u001b[39m0\u001b[39;49m], new_state[\u001b[39m1\u001b[39;49m]]]\n\u001b[0;32m     29\u001b[0m succ_states\u001b[39m.\u001b[39mappend(new_state)\n\u001b[0;32m     30\u001b[0m succ_actions\u001b[39m.\u001b[39mappend(action)\n",
+      "\u001b[1;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Define the world and costs\n",
+    "world = np.ones((4,4))\n",
+    "costs = np.ones(10)\n",
+    "\n",
+    "# Define the initial and goal states\n",
+    "initial_state = [0, 0]\n",
+    "goal_state = [3, 3]\n",
+    "\n",
+    "# Create the agent\n",
+    "agent = Agent(world, costs, initial_state, goal_state)\n",
+    "\n",
+    "# Run depth first search\n",
+    "goal_node = depth_first_graph_search(agent)\n",
+    "\n",
+    "# Print the goal node state\n",
+    "print(goal_node.state)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "proba",
    "language": "python",
    "name": "python3"
   },
@@ -318,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.16"
   },
   "toc": {
    "colors": {
@@ -343,6 +403,11 @@
    "toc_section_display": "block",
    "toc_window_display": false,
    "widenNotebook": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "2dff9fdaf7b94c5adc137ae9efacb6eb17db3d464d727aaf2eb000ed4ad138c2"
+   }
   }
  },
  "nbformat": 4,
