--- a/AI-Ex.ipynb
+++ b/AI-Ex.ipynb
@@ -606,13 +606,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
    "outputs": [],
@@ -827,8 +820,7 @@
     "\"\"\"\n",
     "\n",
     "path = depth_first_graph_search(agent1)\n",
-    "#path2=\n",
-    "print(path)\n",
+    "\n",
     "\n"
    ]
   },
@@ -1023,7 +1015,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "proba",
    "language": "python",
    "name": "python3"
   },
@@ -1037,7 +1029,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "toc": {
    "colors": {
@@ -1065,7 +1057,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "5ddffc6228e7fe7cba668577e622f89d9d26445fd2ef8028a1d4f8d9a92670f1"
+    "hash": "2dff9fdaf7b94c5adc137ae9efacb6eb17db3d464d727aaf2eb000ed4ad138c2"
    }
   }
  },
