--- a/AI-Ex2.ipynb
+++ b/AI-Ex2.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -109,7 +109,7 @@
        "\"\\n\\nAda = Agent(map1, COSTS, [0,0], [12,15])\\ng_node = uniform_cost_search(Ada)\\n\\nprint(g_node.state)\\n\\np = g_node.path()\\n\\nmoves = {'01':'⏩','0-1':'⏪','-10':'⏫', '10':'⏬'}\\n\\nmap_copy = map1.copy()\\n\\n\\nfor i in range(len(p)-1):\\n\\n    ac = p[i]\\n    n = p[i+1]\\n\\n    map_copy[ac.state[0], ac.state[1]] = moves[str(n.action[0])+str(n.action[1])]\\n\\n\\nfor i in range(map_copy.shape[0]):\\n    print(map_copy[i,:])\\n\\n\""
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,8 @@
     "        # Team init        \n",
     "        while node:\n",
     "            path_back.append(node)\n",
-    "            node = node.parent # Team final\n",
+    "            node = node.parent \n",
+    "        # Team final\n",
     "        return list(reversed(path_back))\n",
     "\n",
     "\n",
@@ -205,11 +206,20 @@
     "    \"\"\"\n",
     "    frontier = [(Node(agent.initial_state))]  # Stack\n",
     "    explored = []\n",
+    "    cont=0\n",
     "    while frontier:\n",
     "        node = frontier.pop() # LIFO\n",
     "        if node.state == agent.goal_state:\n",
     "            return node.path()\n",
+    "        cont=cont+1\n",
+    "        if(cont==40):\n",
+    "            break\n",
     "        explored.append(node)\n",
+    "        print(\"\\nNode: \",node)\n",
+    "        print(\"\\ninitial_state\",agent.initial_state)\n",
+    "        print(\"\\nCosto: \",agent.costs)\n",
+    "        print(\"\\ngoal_state\",agent.goal_state)\n",
+    "        agent.current_state=node.state\n",
     "        for child in node.successors(agent):\n",
     "            if child not in explored and child not in frontier:\n",
     "                frontier.append(child)\n",
@@ -322,43 +332,352 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 15\u001b[0m\n\u001b[0;32m     12\u001b[0m agent \u001b[39m=\u001b[39m Agent(world, costs, initial_state, goal_state)\n\u001b[0;32m     14\u001b[0m \u001b[39m# Run depth first search\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m goal_node \u001b[39m=\u001b[39m depth_first_graph_search(agent)\n\u001b[0;32m     17\u001b[0m \u001b[39m# Print the goal node state\u001b[39;00m\n\u001b[0;32m     18\u001b[0m \u001b[39mprint\u001b[39m(goal_node\u001b[39m.\u001b[39mstate)\n",
-      "Cell \u001b[1;32mIn[7], line 94\u001b[0m, in \u001b[0;36mdepth_first_graph_search\u001b[1;34m(agent)\u001b[0m\n\u001b[0;32m     92\u001b[0m     \u001b[39mreturn\u001b[39;00m node\u001b[39m.\u001b[39mpath()\n\u001b[0;32m     93\u001b[0m explored\u001b[39m.\u001b[39mappend(node)\n\u001b[1;32m---> 94\u001b[0m \u001b[39mfor\u001b[39;00m child \u001b[39min\u001b[39;00m node\u001b[39m.\u001b[39;49msuccessors(agent):\n\u001b[0;32m     95\u001b[0m     \u001b[39mif\u001b[39;00m child \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m explored \u001b[39mand\u001b[39;00m child \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m frontier:\n\u001b[0;32m     96\u001b[0m         frontier\u001b[39m.\u001b[39mappend(child)\n",
-      "Cell \u001b[1;32mIn[7], line 61\u001b[0m, in \u001b[0;36mNode.successors\u001b[1;34m(self, agent)\u001b[0m\n\u001b[0;32m     59\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msuccessors\u001b[39m(\u001b[39mself\u001b[39m, agent):\n\u001b[1;32m---> 61\u001b[0m     succ_states, succ_actions, succ_costs \u001b[39m=\u001b[39m agent\u001b[39m.\u001b[39;49mpossible_moves()\n\u001b[0;32m     62\u001b[0m     children \u001b[39m=\u001b[39m []\n\u001b[0;32m     64\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(succ_states)):\n",
-      "Cell \u001b[1;32mIn[7], line 27\u001b[0m, in \u001b[0;36mAgent.possible_moves\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     23\u001b[0m new_state \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcurrent_state[\u001b[39m0\u001b[39m] \u001b[39m+\u001b[39m move[\u001b[39m0\u001b[39m], \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcurrent_state[\u001b[39m1\u001b[39m] \u001b[39m+\u001b[39m move[\u001b[39m1\u001b[39m]]\n\u001b[0;32m     25\u001b[0m action \u001b[39m=\u001b[39m [move[\u001b[39m0\u001b[39m], move[\u001b[39m1\u001b[39m]]\n\u001b[1;32m---> 27\u001b[0m cost \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcosts[\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mworld[new_state[\u001b[39m0\u001b[39;49m], new_state[\u001b[39m1\u001b[39;49m]]]\n\u001b[0;32m     29\u001b[0m succ_states\u001b[39m.\u001b[39mappend(new_state)\n\u001b[0;32m     30\u001b[0m succ_actions\u001b[39m.\u001b[39mappend(action)\n",
-      "\u001b[1;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4DDAF5B0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4DE21880>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F23B910>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F23BEE0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F244AC0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F244B80>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F244CA0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F244D60>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F244E80>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F244F40>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F2540A0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F254160>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F254280>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F254340>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F254460>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F254520>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F254640>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F254700>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F254820>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F2548E0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F254A00>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F254AC0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F254BE0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F254CA0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F254DC0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F254E80>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F254FA0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F25A0A0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F25A1C0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F25A280>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F25A3A0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F25A460>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F25A580>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F25A640>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F25A760>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F25A820>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F25A940>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F25AA00>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F25AB20>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "goal_state (2, 2)\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "# Define the world and costs\n",
-    "world = np.ones((4,4))\n",
-    "costs = np.ones(10)\n",
+    "world = np.array([[0, 1, 3],\n",
+    "                  [2, 3, 2],\n",
+    "                  [0, 1, 3]])\n",
     "\n",
-    "# Define the initial and goal states\n",
-    "initial_state = [0, 0]\n",
-    "goal_state = [3, 3]\n",
+    "costs = {0: 10, 1: 1, 2: 5, 3:100}\n",
     "\n",
-    "# Create the agent\n",
-    "agent = Agent(world, costs, initial_state, goal_state)\n",
+    "initial_state = (0, 0)\n",
+    "goal_state = (2,2)\n",
     "\n",
-    "# Run depth first search\n",
-    "goal_node = depth_first_graph_search(agent)\n",
+    "agent1 = Agent(world, costs, initial_state, goal_state)\n",
     "\n",
-    "# Print the goal node state\n",
-    "print(goal_node.state)\n"
+    "\"\"\"\n",
+    "print(agent1.world)\n",
+    "print(agent1.costs)\n",
+    "print(agent1.initial_state)\n",
+    "print(agent1.goal_state)\n",
+    "print(agent1.moves)\n",
+    "print(agent1.possible_moves())\n",
+    "\"\"\"\n",
+    "\n",
+    "path = depth_first_graph_search(agent1)\n"
    ]
   }
  ],
