add current state

--- a/AI-Ex2.ipynb
+++ b/AI-Ex2.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -109,7 +109,7 @@
        "\"\\n\\nAda = Agent(map1, COSTS, [0,0], [12,15])\\ng_node = uniform_cost_search(Ada)\\n\\nprint(g_node.state)\\n\\np = g_node.path()\\n\\nmoves = {'01':'⏩','0-1':'⏪','-10':'⏫', '10':'⏬'}\\n\\nmap_copy = map1.copy()\\n\\n\\nfor i in range(len(p)-1):\\n\\n    ac = p[i]\\n    n = p[i+1]\\n\\n    map_copy[ac.state[0], ac.state[1]] = moves[str(n.action[0])+str(n.action[1])]\\n\\n\\nfor i in range(map_copy.shape[0]):\\n    print(map_copy[i,:])\\n\\n\""
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,6 +218,7 @@
     "        print(\"\\nNode: \",node)\n",
     "        print(\"\\ninitial_state\",agent.initial_state)\n",
     "        print(\"\\nCosto: \",agent.costs)\n",
+    "        print(\"\\ncurrent_state: \",node.state)\n",
     "        print(\"\\ngoal_state\",agent.goal_state)\n",
     "        agent.current_state=node.state\n",
     "        for child in node.successors(agent):\n",
@@ -332,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -340,75 +341,83 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4DDAF5B0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4DDB58B0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  (0, 0)\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4DE21880>\n",
+      "Node:  <__main__.Node object at 0x000001DC4DE21A30>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [1, 0]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F23B910>\n",
+      "Node:  <__main__.Node object at 0x000001DC4DE218E0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [2, 0]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F23BEE0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4DE214C0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [1, 0]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F244AC0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F244EB0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [2, 0]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F244B80>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F244B50>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [1, 0]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F244CA0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F244FA0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [2, 0]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F244D60>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F244AF0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F244E80>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "current_state:  [1, 0]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
@@ -418,237 +427,307 @@
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [2, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F2540A0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F244A60>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [1, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F254160>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F244EE0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [2, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F254280>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F265670>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [1, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F254340>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F265FD0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [2, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F254460>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F265790>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [1, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F254520>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F265880>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [2, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F254640>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F2655B0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [1, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F254700>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F265E80>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [2, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F254820>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F265430>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [1, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F2548E0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F2652B0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [2, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F254A00>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F265310>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [1, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F254AC0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F2651C0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [2, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F254BE0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F2650D0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [1, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F254CA0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F265040>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [2, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F254DC0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F2659D0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [1, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F254E80>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F265C10>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [2, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F254FA0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F265CD0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [1, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F25A0A0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F265DF0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [2, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F25A1C0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F26D0A0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [1, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F25A280>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F26D1C0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [2, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F25A3A0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F26D280>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [1, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F25A460>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F26D3A0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [2, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F25A580>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F26D460>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [1, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F25A640>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F26D580>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [2, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F25A760>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F26D640>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [1, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F25A820>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F26D760>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [2, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F25A940>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F26D820>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [1, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F25AA00>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F26D940>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
+      "current_state:  [2, 0]\n",
+      "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F25AB20>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F26DA00>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [1, 0]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F26DB20>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [2, 0]\n",
       "\n",
       "goal_state (2, 2)\n"
      ]
